[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"
