[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []
io_uring = ["tokio-uring", "io-uring"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
dashmap = "6.1.0"
futures = "0.3"
parking_lot = "0.12"
rand = "0.9.1"
rkyv = { version = "0.8", features = ["bytecheck"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# Platform-specific dependencies for io_uring support
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = "1.0"
bytes = "1.0"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"
